force-app/main/default/objects/Patient_c__c/Patient_c__c.object-meta.xml
<CustomObject>
    <label>Patient</label>
    <nameField>
        <displayFormat>PAT-{YYYY}-{00000}</displayFormat>
        <label>Patient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>