force-app/main/default/objects/Patient_c__c/fields/Calculated_Age_c__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Age_c__c</fullName>
    <formula>IF(NOT(ISBLANK(Date_Of_Birth__c)), 
   YEAR(TODAY()) - YEAR(Date_Of_Birth__c) - 
   IF(OR(MONTH(TODAY()) &lt; MONTH(Date_Of_Birth__c), 
         AND(MONTH(TODAY()) == MONTH(Date_Of_Birth__c), DAY(TODAY()) &lt; DAY(Date_Of_Birth__c))), 
1, 0), 
   NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated_Age__c</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>