force-app/main/default/objects/Patient_c__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <externalId>true</externalId>
    <label>First Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>