force-app/main/default/objects/Patient_c__c/fields/Has_Critical_Allergies__c.field-meta.xml
<CustomField>
    <fullName>Has_Critical_Allergies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Critical Allergies</label>
    <type>Checkbox</type>
</CustomField>