force-app/main/default/objects/Patient_c__c/fields/Risk_Status_Icon_c__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status_Icon_c__c</fullName>
    <formula>IF(Has_Critical_Allergies__c, &quot;🔴 HIGH RISK&quot;, &quot;🟢 NORMAL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk_Status_Icon__c</label>
    <type>Text</type>
</CustomField>