force-app/main/default/objects/Patient_c__c/fields/SSN_Identification__c.field-meta.xml
<CustomField>
    <fullName>SSN_Identification__c</fullName>
    <externalId>true</externalId>
    <label>SSN Identification</label>
    <length>14</length>
    <required>true</required>
    <type>Text</type>
</CustomField>