force-app/main/default/objects/Patient_c__c/validationRules/Date_of_birth.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_of_birth</fullName>
    <active>true</active>
    <description>&quot;Date of Birth cannot be
set in the future.</description>
    <errorConditionFormula>Date_Of_Birth__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date_Of_Birth__c</errorDisplayField>
    <errorMessage>&quot;Date of Birth cannot be
set in the future.&quot;</errorMessage>
</ValidationRule>