force-app/main/default/objects/Patient_c__c/validationRules/SSN.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(), 
    NOT(REGEX(SSN_Identification__c, &quot;\\d{3}-\\d{2}-\\d{4}&quot;))
)</errorConditionFormula>
    <errorDisplayField>SSN_Identification__c</errorDisplayField>
    <errorMessage>&quot;SSN must follow
standard formatting:
XXX-XX-XXXX.&quot;</errorMessage>
</ValidationRule>