force-app/main/default/objects/Patient_c__c/validationRules/SSN_modify.validationRule-meta.xml
<ValidationRule>
    <fullName>SSN_modify</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(SSN_Identification__c), 
    NOT($Profile.Name = &quot;System Administrator&quot;)
)</errorConditionFormula>
    <errorDisplayField>SSN_Identification__c</errorDisplayField>
    <errorMessage>&quot;SSN must follow
standard formatting:
XXX-XX-XXXX.&quot;</errorMessage>
</ValidationRule>