force-app/main/default/objects/Patient_c__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Risk_Status_Icon_c__c</columns>
    <columns>SSN_Identification__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>